--- a/app/views/main.scala.html
+++ b/app/views/main.scala.html
@@ -14,6 +14,7 @@
         <title>@title</title>
         <link rel="stylesheet" media="screen" href="@assetsFinder.path("stylesheets/main.css")">
         <link rel="shortcut icon" type="image/png" href="@assetsFinder.path("images/favicon.png")">
+        <script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.6.9/angular.min.js"></script>
         <script src="@assetsFinder.path("javascripts/hello.js")" type="text/javascript"></script>
     </head>
     <body>
